@@ -1,6 +1,8 @@
 March 2023 8.3
   - Windows users: display name can be hidden in server profile
   - RPM package cleanup
+  - LAM Pro:
+   -> Custom scripts: new wildcard INFO.lamLoginDn for current user
 
 
 13.12.2022 8.2
